--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -119,3 +119,16 @@
        stroke: url(#grad1);
     }
 }
+
+//anim-grid dish
+
+@keyframes ghost {
+    0%{
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
