--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,6 +7,7 @@ body{
 h1{
     @include typo1;
     font-size: 27px;
+    text-align: center;
 
     &::after{
         content: '';
@@ -16,7 +17,7 @@ h1{
         height: 4px;
         width: 0%;
 
-        background: transparent;
+        /* background: inherit; */
 
         transition: width $duration ease, background-color $duration ease;
         transform-origin: right;
