--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ h6 {
     opacity: 1;
     z-index: 10;
   }
+  90% {
+    opacity: 0.3;
+    z-index: 10;
+  }
   99% {
     opacity: 0;
     z-index: 10;
@@ -368,28 +372,31 @@ h6 {
   opacity: 1;
 }
 
+body {
+  position: relative;
+}
+
 .loader {
-  /* 
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0s, opacity 0.5s linear; */
-  width: 100%;
-  height: 100%;
-  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  position: fixed;
   font-family: Shrikhand, sans-serif;
   font-size: 3rem;
   background-color: #f5edff;
   opacity: 0.8;
   z-index: 1000;
-  animation: opaci 2s ease-in forwards;
+  animation: opaci 3s ease-in forwards;
 }
-.loader__border {
-  position: relative;
-  width: 500px;
-  height: 500px;
+.loader__txt {
+  text-align: center;
+}
+.loader--bars {
+  position: absolute;
+  top: 65%;
+  transform: translateX(-0.8em);
 }
 
 /* loader barres */
