--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -6,7 +6,11 @@
 		opacity: 1;
 		z-index: 10;
 	}
-	99% {
+	90% {
+		opacity: .3;
+		z-index: 10;
+	}
+    99% {
 		opacity: 0;
 		z-index: 10;
 	}
