--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -1,17 +1,17 @@
 //loader
 
+body{
+    position: relative;
+}
+
 .loader{
-    /* 
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s, opacity 0.5s linear; */
+
+    @include flex-center;
 
     width: 100%;
     height: 100%;
 
     position: fixed;
-
-    @include flex-center;
 
     @include typo1;
     font-size: 3rem;
@@ -21,12 +21,18 @@
 
     z-index: 1000;
 
-    animation: opaci 2s ease-in forwards;
+    animation: opaci 3s ease-in forwards;
 
-    &__border{
-        position: relative;
-        width: 500px;
-        height: 500px;
+    &__txt{
+        text-align: center;
+    }
+
+    &--bars{
+        position: absolute;
+        top: 65%;
+        
+        transform: translateX(-.8em);
+
     }
 }
 
