--- a/css/style.css
+++ b/css/style.css
@@ -468,7 +468,7 @@ body {
 
 .hero {
   background: #f6f6f6;
-  padding: 2em 3em;
+  padding: 2em 3em 3.5em 3em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -478,7 +478,7 @@ body {
 }
 .hero__subtitle {
   font-weight: 200;
-  margin: 1em 0 1em 0;
+  margin: 1em 0 2em 0;
 }
 .hero__button {
   display: flex;
@@ -487,7 +487,7 @@ body {
 }
 
 .nav {
-  padding: 2em 1em;
+  padding: 2em 2em;
 }
 .nav__title {
   margin-bottom: 1em;
@@ -584,7 +584,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 4em;
+  height: 3.5em;
   background: #eaeaea;
 }
 .location__icon {
