correct typo + link commit

--- a/css/style.css
+++ b/css/style.css
@@ -483,7 +483,8 @@ h6 {
 }
 .restaurants__card__description__like .heart--grad {
   transform: scale(0.1);
-  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  /* background: -webkit-gradient(linear, left top, left bottom, from($color-1), to($color-2)); */
+  background: linear-gradient(190deg, #9356dc 38%, #ff79da 75%, #ff79da 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   transform-origin: 50% 65%;
