--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -157,7 +157,8 @@
 
                 &--grad{
                     transform: scale(0.1);
-                    background: -webkit-gradient(linear, left top, left bottom, from($color-1), to($color-2));	                
+                    /* background: -webkit-gradient(linear, left top, left bottom, from($color-1), to($color-2)); */	                
+                    background: linear-gradient(190deg, rgba(147,86,220,1) 38%, rgba(255,121,218,1) 75%, rgba(255,121,218,1) 100%);
                     -webkit-background-clip: text;
 	                -webkit-text-fill-color: transparent;
                     transform-origin: 50% 65%;
