comment media queries mixin$

--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -52,6 +52,8 @@
     background: rgb(147,86,220);
     background: linear-gradient(190deg, rgba(147,86,220,1) 38%, rgba(255,121,218,1) 75%, rgba(255,121,218,1) 100%);
 }
+
+//mixin media queries
 @mixin desktop {
 	@media screen and (min-width: 1000px) {
 		@content;
